@@ -1,3 +1,7 @@
+2008-02-22  Michal Nazarewicz  <mina86/AT/mina86.com>
+
+	* extractlinks.pl: + added -b option to specify base address
+
 2008-02-07  Michal Nazarewicz  <mina86/AT/mina86.com>
 
 	* FvwmTransFocus.c: + bug where prev_id value was not preserved fixed
